# stock-pro

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_tables.py
app/: main.py
app/api/: deps.py  router.py
app/api/endpoints/: __init__.py  agenda.py  alquileres.py  auth.py  clientes.py  dashboard.py  depositos.py  eventos.py  movimientos.py  productos.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  alquiler.py  cliente.py  deposito.py  evento.py  movimiento.py  producto.py  user.py
app/schemas/: alquiler.py  auth.py  cliente.py  deposito.py  evento.py  movimiento.py  producto.py  user.py
app/services/: agenda_service.py  alquiler_service.py  auth_service.py  cliente_service.py  dashboard_service.py  deposito_service.py  evento_service.py  movimiento_service.py  producto_service.py  seed_data.py
